@@ -1,3 +1,10 @@
+2016-11-14  Martin Liska  <mliska@suse.cz>
+
+	PR bootstrap/78069
+	* gcc.dg/no_profile_instrument_function-attr-1.c: Update test
+	to match scanned pattern.
+	* gcc.dg/tree-ssa/ssa-lim-11.c: Likewise.
+
 2016-11-14  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/78312
